was add documentation to product and category;
